fix navbar toggle icon spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
 
 .navbar-brand {
     font-weight: bold;
-    font-size: xx-large;
+    font-size: x-large;
     color: #112f65 !important;
 }
 
